		   Visible changes since Mutt 1.2
		   ==============================


Folder formats and folder access
--------------------------------

- Better mh support: Mutt now supports .mh_sequences files.
  Currently, the "unseen", "flagged", and "replied" sequences are
  used to store mutt flags. As a side effect, messages in MH folders
  are no longer rewritten upon status changes.

- The "trashed" flag is supported for maildir folders.  See
  $maildir_trash.

- POP folder support.  You can now access a POP mailbox just like an
  IMAP folder (with obvious restrictions due to the protocol).

- URL syntax for remote folders.  You can pass things like
  pop://account@host and imap://account@host/folder as arguments for
  the -f command line flag.

- STARTTLS support.  If $ssl_starttls is set (the default), mutt
  will attempt to use STARTTLS on servers advertising that
  capability.

- $preconnect.  If set, a shell command to be executed if mutt fails
  to establish a connection to the server.  This is useful for
  setting up secure connections; see the muttrc(5) for details.

- $tunnel.  Use a pipe to a command instead of a raw socket.  See
  muttrc(5) for details.  (Basically, it's another way for setting
  up secure connections.)

- More new IMAP/POP-related variables (see muttrc(5) for details):
  $connect_timeout, $imap_authenticators, $imap_delim_chars,
  $imap_peek, $pop_authenticators, $pop_auth_try_all,
  $pop_checkinterval, $pop_delete, $pop_reconnect, $use_ipv6.

- The following IMAP/POP-related variables are gone:
  $imap_checkinterval, $imap_cramkey, $pop_port.

- There's a new imap-fetch-mail function, which forces a check for
  new messages on an IMAP server.

- The new-mailbox function was renamed to create-mailbox, and is
  bound to C instead of n by default.

Character set support
---------------------

- Mutt now uses the iconv interface for character set conversions.
  This means that you need either a very modern libc, or Bruno